# MultiMedia

./: LICENSE  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lh/mediatest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: media_data_raw.cpp  media_data_raw.h  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/lh/mediatest/: FFmpegActivity.java  MainActivity.java  RecordingActivity.java
app/src/main/java/com/lh/mediatest/util/: PermissionUtils.java
app/src/main/java/com/lh/mediatest/widget/: CustomSurfaceView.java  CustomView.java
app/src/main/res/layout/: activity_ffmpeg.xml  activity_main.xml  activity_recording.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/test/java/com/lh/mediatest/: ExampleUnitTest.java
waveview/: build.gradle
waveview/src/androidTest/java/com/beaver/waveview/: ExampleInstrumentedTest.java
waveview/src/main/: AndroidManifest.xml
waveview/src/main/java/com/beaver/waveview/: AudioCapture.java  AudioTrackPlayer.java  IAudioCaptureListener.java  WaveformView.java
waveview/src/main/java/com/beaver/waveview/soundfile/: WavFile.java
waveview/src/test/java/com/beaver/waveview/: ExampleUnitTest.java
